--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=totnghiep
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/totnghiep1?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/totnghiep?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
 
